--- a/candidly_frontend/my-app/app/globals.css
+++ b/candidly_frontend/my-app/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Style the container with the custom scrollbar */
+.scroll-container {
+    max-height: 460px;
+    overflow-y: auto;
+  }
+  
+  /* Style the scrollbar track */
+  .scroll-container::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+  /* Style the scrollbar handle */
+  .scroll-container::-webkit-scrollbar-thumb {
+    background-color: #000080; /* Change the color as needed */
+    border-radius: 4px;
+  }
+  
+  /* Style the scrollbar handle on hover */
+  .scroll-container::-webkit-scrollbar-thumb:hover {
+    background-color: #525252; /* Change the color as needed */
+  }
+  
