--- a/candidly_frontend/my-app/app/globals.css
+++ b/candidly_frontend/my-app/app/globals.css
@@ -23,4 +23,16 @@
   .scroll-container::-webkit-scrollbar-thumb:hover {
     background-color: #525252; /* Change the color as needed */
   }
+
+  .responsive-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; /* Allow items to wrap to the next line if needed */
+  }
+  
+  .responsive-container > div {
+    flex: 0 1 48%; /* Initial size of the items, adjust as needed */
+    box-sizing: border-box; /* Include padding and border in the width calculation */
+    margin-bottom: 1em; /* Adjust spacing between items as needed */
+  }
   
