--- a/candidly_frontend/my-app/app/globals.css
+++ b/candidly_frontend/my-app/app/globals.css
@@ -2,37 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Style the container with the custom scrollbar */
 .scroll-container {
-    max-height: 460px;
+    max-height: 85%;
     overflow-y: auto;
   }
   
-  /* Style the scrollbar track */
   .scroll-container::-webkit-scrollbar {
     width: 4px;
   }
   
-  /* Style the scrollbar handle */
   .scroll-container::-webkit-scrollbar-thumb {
-    background-color: #000080; /* Change the color as needed */
+    background-color: #000080;
     border-radius: 4px;
   }
   
-  /* Style the scrollbar handle on hover */
   .scroll-container::-webkit-scrollbar-thumb:hover {
-    background-color: #525252; /* Change the color as needed */
+    background-color: #525252;
   }
 
-  .responsive-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; /* Allow items to wrap to the next line if needed */
+  .scroll-container-mobile {
+    max-height: 80%;
+    overflow-y: auto;
   }
   
-  .responsive-container > div {
-    flex: 0 1 48%; /* Initial size of the items, adjust as needed */
-    box-sizing: border-box; /* Include padding and border in the width calculation */
-    margin-bottom: 1em; /* Adjust spacing between items as needed */
+  .scroll-container-mobile::-webkit-scrollbar {
+    width: 4px;
   }
+  
+  .scroll-container-mobile::-webkit-scrollbar-thumb {
+    background-color: #000080;
+    border-radius: 4px;
+  }
+  
+  .scroll-container-mobile::-webkit-scrollbar-thumb:hover {
+    background-color: #525252;
+  }
+
+
   
